--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ html{
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6),#ff004f);
+    background: linear-gradient(rgba(0,0,0,0.6),#0011ff);
     border-radius: 10px;
     position: absolute;
     left: 0;
